@@ -10,6 +10,7 @@ import org.icij.datashare.session.LocalUserFilter;
 import org.icij.datashare.test.ElasticsearchRule;
 import org.icij.datashare.text.DocumentBuilder;
 import org.icij.datashare.text.indexing.elasticsearch.ElasticsearchIndexer;
+import org.icij.datashare.user.User;
 import org.icij.datashare.web.testhelpers.AbstractProdWebServerTest;
 import org.junit.After;
 import org.junit.Before;
@@ -18,7 +19,9 @@ import org.junit.Test;
 import org.mockito.Mock;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.initMocks;
@@ -85,12 +88,6 @@ public class IndexResourceTest extends AbstractProdWebServerTest {
 
     @Test
     public void test_auth_forward_request_with_user_logged_on() throws IOException {
-        configure(routes -> {
-            Users users =  DatashareUser.singleUser("cecile");
-            routes
-                    .add(new IndexResource(indexer))
-                    .filter(new BasicAuthFilter("/", "icij", users));
-        });
         indexer.add("cecile-datashare", DocumentBuilder.createDoc("1234567890abcdef").withRootId("rootId").build());
         get("/api/index/search/cecile-datashare/_search?routing=rootId").withPreemptiveAuthentication("cecile", "").should().
                 respond(200).contain("1234567890abcdef");
@@ -101,15 +98,8 @@ public class IndexResourceTest extends AbstractProdWebServerTest {
 
     @Test
     public void test_auth_forward_request_with_user_logged_on_only_allow_search_and_count_on_post() throws IOException {
-        configure(routes -> {
-                Users users =  DatashareUser.singleUser("cecile");
-                routes
-                    .add(new IndexResource(indexer))
-                    .filter(new BasicAuthFilter("/", "icij", users));
-        });
         indexer.add("cecile-datashare", DocumentBuilder.createDoc("1234567890abcdef").build());
         post("/api/index/search/cecile-datashare/_search").withPreemptiveAuthentication("cecile", "").should().respond(200);
-        post("/api/index/search/cecile-datashare/_doc/_search").withPreemptiveAuthentication("cecile", "").should().respond(200);
         get("/api/index/search/cecile-datashare/_doc/1234567890abcdef").withPreemptiveAuthentication("cecile", "").should().respond(200);
         post("/api/index/search/_search/scroll", "{\"scroll_id\":\"DXF1ZXJ5QW5kRmV0Y2gBAAAAAAAAAD4WYm9laVYtZndUQlNsdDcwakFMNjU1QQ\"}").withPreemptiveAuthentication("cecile", "").should().respond(500);
         post("/api/index/search/cecile-datashare/_count").withPreemptiveAuthentication("cecile", "").should().respond(200);
@@ -121,15 +111,19 @@ public class IndexResourceTest extends AbstractProdWebServerTest {
     public void test_auth_forward_request_with_user_logged_on_allow_search_on_multiple_indices() throws IOException {
         configure(routes ->
                 routes.add(new IndexResource(indexer)).
-                        filter(new BasicAuthFilter("/", "icij", DatashareUser.singleUser(new DatashareUser(new HashMap<>() {{
-                            put("uid", "cecile");
-                            put("groups_by_applications", Map.of("datashare", List.of(es.getIndexNames()[1], es.getIndexNames()[2])));
-                        }})))));
+                        filter(new BasicAuthFilter("/", "icij", DatashareUser.singleUser(new User(new HashMap<String, Object>() {
+                            {
+                                this.put("uid", "cecile");
+                                this.put("groups_by_applications", new HashMap<String, Object>() {
+                                    {
+                                        this.put("datashare", Arrays.asList(es.getIndexNames()[1], es.getIndexNames()[2]));
+                                    }
+                                });
+                            }
+                        })))));
         indexer.add(es.getIndexNames()[1], DocumentBuilder.createDoc("doc1").withRootId("rootId").build());
         indexer.add(es.getIndexNames()[2], DocumentBuilder.createDoc("doc2").withRootId("rootId").build());
         post("/api/index/search/%s,%s/_search".formatted(es.getIndexNames()[1], es.getIndexNames()[2]))
-                .withPreemptiveAuthentication("cecile", "").should().respond(200);
-        post("/api/index/search/%s,%s/_doc/_search".formatted(es.getIndexNames()[1], es.getIndexNames()[2]))
                 .withPreemptiveAuthentication("cecile", "").should().respond(200);
         post("/api/index/search/%s,%s/_count".formatted(es.getIndexNames()[1], es.getIndexNames()[2]))
                 .withPreemptiveAuthentication("cecile", "").should().respond(200);
@@ -142,10 +136,16 @@ public class IndexResourceTest extends AbstractProdWebServerTest {
     public void test_auth_forward_request_with_user_logged_on_multiple_indices_with_bad_requests() throws IOException {
         configure(routes ->
                 routes.add(new IndexResource(indexer)).
-                        filter(new BasicAuthFilter("/", "icij", DatashareUser.singleUser(new DatashareUser(new HashMap<>() {{
-                            put("uid", "cecile");
-                            put("groups_by_applications", Map.of("datashare", List.of(es.getIndexNames()[1], es.getIndexNames()[2])));
-                        }})))));
+                        filter(new BasicAuthFilter("/", "icij", DatashareUser.singleUser(new User(new HashMap<String, Object>() {
+                            {
+                                this.put("uid", "cecile");
+                                this.put("groups_by_applications", new HashMap<String, Object>() {
+                                    {
+                                        this.put("datashare", Arrays.asList(es.getIndexNames()[1], es.getIndexNames()[2]));
+                                    }
+                                });
+                            }
+                        })))));
         indexer.add(es.getIndexNames()[1], DocumentBuilder.createDoc("doc1").withRootId("rootId").build());
         indexer.add(es.getIndexNames()[2], DocumentBuilder.createDoc("doc2").withRootId("rootId").build());
         post("/api/index/search/%s,  /_search".formatted(es.getIndexNames()[1])).withPreemptiveAuthentication("cecile", "").should().respond(400);
@@ -178,6 +178,12 @@ public class IndexResourceTest extends AbstractProdWebServerTest {
     public void setUp() {
         initMocks(this);
         when(jooqRepository.getProjects()).thenReturn(new ArrayList<>());
+        configure(routes -> {
+            Users users =  DatashareUser.singleUser("cecile");
+            routes
+                    .add(new IndexResource(indexer))
+                    .filter(new BasicAuthFilter("/", "icij", users));
+        });
     }
 
     @After
